// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksView Snapshots matches snapshot with error state 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f6fa",
      "flex": 1,
    }
  }
  testID="tasks-view-error"
>
  <Text
    style={
      {
        "color": "#e74c3c",
        "fontSize": 16,
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-text"
  >
    Failed to load tasks
  </Text>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontSize": 18,
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-hint"
  >
    Pull to refresh
  </Text>
</View>
`;

exports[`TasksView Snapshots matches snapshot with loading state 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f6fa",
      "flex": 1,
    }
  }
  testID="tasks-view-loading"
>
  <ActivityIndicator
    color="#3498db"
    size="large"
    testID="tasks-view-loading-spinner"
  />
  <Text
    style={
      {
        "color": "#57606f",
        "fontSize": 16,
        "marginTop": 16,
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-loading-text"
  >
    Loading tasks...
  </Text>
</View>
`;
